--- a/index.html
+++ b/index.html
@@ -8,52 +8,52 @@
 </head>
 
 <body>
-  <h1>Hangman</h1>
-  <button>Again</button>
-  <section id="letters">
-    <div id="A">A</div>
-    <div id="B">B</div>
-    <div id="C">C</div>
-    <div id="D">D</div>
-    <div id="E">E</div>
-    <div id="F">F</div>
-    <div id="G">G</div>
-    <div id="H">H</div>
-    <div id="I">I</div>
-    <div id="J">J</div>
-    <div id="K">K</div>
-    <div id="L">L</div>
-    <div id="M">M</div>
-    <div id="N">N</div>
-    <div id="O">O</div>
-    <div id="P">P</div>
-    <div id="Q">Q</div>
-    <div id="R">R</div>
-    <div id="S">S</div>
-    <div id="T">T</div>
-    <div id="U">U</div>
-    <div id="V">V</div>
-    <div id="W">W</div>
-    <div id="X">X</div>
-    <div id="Y">Y</div>
-    <div id="Z">Z</div>
-  </section>
+  <div class="container">
+    <h1>Hangman</h1>
+    <button>Again</button>
+    <section id="letters">
+      <div id="A">A</div>
+      <div id="B">B</div>
+      <div id="C">C</div>
+      <div id="D">D</div>
+      <div id="E">E</div>
+      <div id="F">F</div>
+      <div id="G">G</div>
+      <div id="H">H</div>
+      <div id="I">I</div>
+      <div id="J">J</div>
+      <div id="K">K</div>
+      <div id="L">L</div>
+      <div id="M">M</div>
+      <div id="N">N</div>
+      <div id="O">O</div>
+      <div id="P">P</div>
+      <div id="Q">Q</div>
+      <div id="R">R</div>
+      <div id="S">S</div>
+      <div id="T">T</div>
+      <div id="U">U</div>
+      <div id="V">V</div>
+      <div id="W">W</div>
+      <div id="X">X</div>
+      <div id="Y">Y</div>
+      <div id="Z">Z</div>
+    </section>
 
-  <section id="hangman-image">
-    <img src="assets/hangman0.png" alt="hangman">
-  </section>
+    <section id="hangman-image">
+      <img src="assets/hangman0.png" alt="hangman">
+    </section>
 
-  <!-- Here you will display the hint for the message. Use an underscore for each letter and a space fo a space. -->
-  <section id="clue">
-    <p>________</p>
-  </section>
+    <!-- Here you will display the hint for the message. Use an underscore for each letter and a space fo a space. -->
+    <section id="clue">
+      <p>________</p>
+    </section>
 
-  <!-- Show this message at the end of the game and reset the game. -->
-  <section id="the-end">
-    <p>The End</p>
-  </section>
-
+    <!-- Show this message at the end of the game and reset the game. -->
+    <section id="the-end">
+      <p>The End</p>
+    </section>
+  </div>
   <script src="script.js" defer></script>
 </body>
-
 </html>
