--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <link href="style.css" rel="stylesheet">
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
+
   <title>Hangman</title>
 </head>
 
